2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac: 
	And back to development cycle.

2008-10-15  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	* RELEASE:
	* NEWS:
	0.11.2 release "Milanesa de Lomo"

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.4 pre-release

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/Makefile.am:
	* po/POTFILES.in:
	sigh... forgot some files.

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.3 pre-release

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/settings.py:
	Filter out muxers for which we can't sink audio or video.
	Fixes #547095

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	patch by: Michael Terry <mike@mterry.name>
	* pitivi/bin.py:
	Fix issue when cancelling rendering.
	Fixes #458944

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/Makefile.am:
	Remove usage of simple timeline.
	* pitivi/ui/complexsource.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/tracklayer.py:
	Also remove files no longer used.

2008-10-10  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ruler.py:
	Fix similar pending-seek behaviour as did previously in the viewer.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/check.py:
	Add a runtime-check for pygoocanvas.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Fix pending-seek behaviour.
	Fixes #554602

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Don't seek if we have an empty timeline.
	Don't set timeouts if the seek failed.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/Makefile.am:
	dist file, even if it's not used, so it doesn't break .po files.

2008-10-09  Edward Hervey  <bilboed@gmail.com>
