@@ -6,6 +6,7 @@ tests = \
 	test_timeline_composition.py	\
 	test_timeline_objects.py	\
 	test_serializable.py		\
+	test_signallable.py		\
 	test_timeline_source.py		\
 	testcomplex.py
 
